<resources>
    <string name="app_name">API Test</string>
    <string name="api_test">API Test</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="session_cookie">Session cookie:</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
</resources>